Move sections into their respective pages

--- a/index.html
+++ b/index.html
@@ -83,194 +83,20 @@
 				fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
 				deserunt mollit anim id est laborum.</p>
 		</article>
-		<artlcle>
+		<article>
 			<h1>Passion</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
 				ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 				fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
 				deserunt mollit anim id est laborum.</p>
-			</article>
-			<article>
-				<h1>Testimonials</h1>
-
-				<div class="card-deck">
-					<div class="card">
-
-
-
-						<div class="testimonial-quote ">
-							<img src="http://placehold.it/120x120">
-							<div class="quote-container">
-								<blockquote>
-									<p>Overall, fantastic! I'd recommend them to anyone looking for a creative,
-										thoughtful, and professional team.”</p>
-								</blockquote>
-								<cite><span>Kristi Bruno</span><br>
-                                Social Media Specialist<br>
-                                American College of Chest Physicians
-                            </cite>
-							</div>
-						</div>
-
-
-
-					</div>
-					<div class="card">
-						<div class="testimonial-quote ">
-							<img src="http://placehold.it/120x120">
-							<div class="quote-container">
-								<blockquote>
-									<p>Overall, fantastic! I'd recommend them to anyone looking for a creative,
-										thoughtful, and professional team.”</p>
-								</blockquote>
-								<cite><span>Kristi Bruno</span><br>
-                                Social Media Specialist<br>
-                                American College of Chest Physicians
-                            </cite>
-							</div>
-						</div>
-					</div>
-					<div class="card">
-						<div class="testimonial-quote ">
-							<img src="http://placehold.it/120x120">
-							<div class="quote-container">
-								<blockquote>
-									<p>Overall, fantastic! I'd recommend them to anyone looking for a creative,
-										thoughtful, and professional team.”</p>
-								</blockquote>
-								<cite><span>Kristi Bruno</span><br>
-                                Social Media Specialist<br>
-                                American College of Chest Physicians
-                            </cite>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-
-			</article>
+		</article>
 	</main>
 
 
-	<main>
-		<section>
-			<article>
-				<div class="container-fluid">
-					<div class="row">
-						<h1>Resume Objectives</h1>
-					</div>
-
-					<style>
-						#test div {
-							background-color: red;
-							border: 1px solid black
-						}
-					</style>
-					<div class="row" id="test">
-
-						<div class="col-12 col-sm-12 col-md-8 order-md-1">
-							1
-						</div>
-						<div class="col-12 col-sm-12 col-md-8 order-md-2">
-							2
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 order-md-1">
-							3
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 order-md-2">
-							4
-						</div>
-
-
-					</div>
-					<div class="row">
-						<h1>Certificates and Projects</h1>
-					</div>
-					<div class="row">
-						<div class="col-1">
-							icon
-						</div>
-						<div clas="col-2">
-							Download
-						</div>
-					</div>
-				</div>
-			</article>
-
-		</section>
-
-	</main>
-
-	<main>
-		<section class="container">
-			<div class="row">
-
-				<div class="col-12 col-sm-6  col-md-4 col-lg-3 bg-primary">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-				<div class="col-12  col-sm-6  col-md-4 col-lg-3 bg-secondary">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-				<div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-success">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-				<div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-danger">
-					<div class="row">
-						image
-					</div>
-					<div class="row">
-						title
-					</div>
-					<div class="row">
-						description
-					</div>
-					<div class="row">
-						icon and link
-					</div>
-				</div>
-			</div>
-
-		</section>
 
 
 
-
-	</main>
 
 	<!--
     Starts of footer
@@ -340,7 +166,7 @@
 						<li><a href="resume.html#education">Education</a></li>
 						<li><a href="resume.html#skills">Skills</a></li>
 						<li><a href="resume.html#certificates">Certificates</a></li>
-                        <li><a href="resume.html#volunteering-experience">Volunteering Experience</a><li>
+                        <li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
 					</ul>
 				</li>
 				<li class=" col-12 col-sm-6 col-md-3">
@@ -352,10 +178,9 @@
                         <li><a href="portfolio.html#project-4 ">Project #4</a></li>
                     </ul>
                     <ul class="sitemap-header">
-                        <li><a href="resume.html" class="download-resume">Portfolio</a></li>
+                        <li><a href="resume.html" class="download-resume">Download</a></li>
                     </ul>
                 </li>
-
             </ul>
             &nbsp;
         </section>
