--- a/portfolio.html
+++ b/portfolio.html
@@ -63,3 +63,185 @@
 	<!--
     Starts of main content area
     -->
+
+
+
+
+
+
+
+
+	<main>
+		<section class="container">
+			<div class="row">
+
+				<div class="col-12 col-sm-6  col-md-4 col-lg-3 bg-primary">
+					<div class="row">
+						image
+					</div>
+					<div class="row">
+						title
+					</div>
+					<div class="row">
+						description
+					</div>
+					<div class="row">
+						icon and link
+					</div>
+				</div>
+				<div class="col-12  col-sm-6  col-md-4 col-lg-3 bg-secondary">
+					<div class="row">
+						image
+					</div>
+					<div class="row">
+						title
+					</div>
+					<div class="row">
+						description
+					</div>
+					<div class="row">
+						icon and link
+					</div>
+				</div>
+				<div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-success">
+					<div class="row">
+						image
+					</div>
+					<div class="row">
+						title
+					</div>
+					<div class="row">
+						description
+					</div>
+					<div class="row">
+						icon and link
+					</div>
+				</div>
+				<div class="col-12  col-sm-6 col-md-4 col-lg-3  bg-danger">
+					<div class="row">
+						image
+					</div>
+					<div class="row">
+						title
+					</div>
+					<div class="row">
+						description
+					</div>
+					<div class="row">
+						icon and link
+					</div>
+				</div>
+			</div>
+
+		</section>
+
+
+
+
+	</main>
+
+
+
+
+
+	<!--
+    Starts of footer
+
+    The footer contains a Bootscrap pagination component,
+    contact details, contact form and a site map navigation.
+    -->
+
+    <!-- The linear page navigation -->
+	<footer class="container-fluid ">
+		<section id="linear-navigation justify-content-center">
+			<nav aria-label="Page navigation">
+				<ul class="pagination justify-content-center ">
+					<li class="page-item disabled p-2">
+						<a class="page-link" href="#" aria-label="Previous">
+							<span aria-hidden="true">&laquo;</span>
+						</a>
+					</li>
+					<li class="page-item p-2 active"><a class="page-link" href="#">1</a></li>
+					<li class="page-item p-2 "><a class="page-link" href="#">2</a></li>
+					<li class="page-item p-2"><a class="page-link" href="#">3</a></li>
+					<li class="page-item p-2"><a class="page-link" href="#">4</a></li>
+					<li class="page-item p-2">
+						<a class="page-link" href="#" aria-label="Next">
+							<span aria-hidden="true">&raquo;</span>
+						</a>
+					</li>
+				</ul>
+    		</nav>
+		</section>
+
+        <!-- The contact section -->
+
+        <section id="contact-section" class="container">
+            <div class="row">
+                <div class="col">
+                    Contact Details
+                </div>
+                <div class="col">
+                    More Contact Details
+                </div>
+                <div class="col">
+                    Contact Form
+                </div>
+            </div>
+        </section>
+
+        <!-- The site map navigation -->
+
+		<section id="footer-sitemap" class="container">
+			<ul class="row ">
+				<li class="col-12 col-sm-6 col-md-3"><a href="idex.html:" class="sitemap-header">Home</a>
+					<ul class="footer-sitemap-li">
+						<li><a href="index.html#bio">Bio</a></li>
+                        <li><a href="index.html#value-proposition">Value Proposition</a></li>
+                        <li><a href="index.html#interest">Interest</a></li>
+						<li><a href="index.html#testimonials">Testimonials</a></li>
+                        <li><a href="index.html#membership">Membership</a></li>
+                        <li><a href="index.html#personality-test">Personality Test</a></li>
+					</ul>
+				</li>
+				<li class=" col-12 col-sm-6 col-md-3"><a href="resume.html" class="sitemap-header">Resume</a>
+					<ul class="footer-sitemap-li">
+						<li><a href="resume.html#objective">Objective</a></li>
+						<li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
+						<li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
+						<li><a href="resume.html#education">Education</a></li>
+						<li><a href="resume.html#skills">Skills</a></li>
+						<li><a href="resume.html#certificates">Certificates</a></li>
+                        <li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
+					</ul>
+				</li>
+				<li class=" col-12 col-sm-6 col-md-3">
+					<a href="portfolio.html" class="sitemap-header">Portfolio</a>
+                    <ul class=" footer-sitemap-li ">
+                        <li><a href="portfolio.html#project-1 ">Project #1</a></li>
+                        <li><a href="portfolio.html#project-2 ">Project #2</a></li>
+                        <li><a href="portfolio.html#project-3 ">Project #3</a></li>
+                        <li><a href="portfolio.html#project-4 ">Project #4</a></li>
+                    </ul>
+                    <ul class="sitemap-header">
+                        <li><a href="resume.html" class="download-resume">Download</a></li>
+                    </ul>
+                </li>
+            </ul>
+            &nbsp;
+        </section>
+    </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src=" https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="
+						sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="
+						anonymous "></script>
+    <script src=" https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="
+						sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="
+						anonymous "></script>
+    <script src=" https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="
+						sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="
+						anonymous "></script>
+</body>
+
+</html>
