--- a/index.html
+++ b/index.html
@@ -115,12 +115,11 @@
 							<span aria-hidden="true">&laquo;</span>
 						</a>
 					</li>
-					<li class="page-item p-2 active"><a class="page-link" href="#">1</a></li>
-					<li class="page-item p-2 "><a class="page-link" href="#">2</a></li>
-					<li class="page-item p-2"><a class="page-link" href="#">3</a></li>
-					<li class="page-item p-2"><a class="page-link" href="#">4</a></li>
+					<li class="page-item p-2 active"><a class="page-link" href="index.html">1</a></li>
+					<li class="page-item p-2 "><a class="page-link" href="resume.html">2</a></li>
+					<li class="page-item p-2"><a class="page-link" href="portfolio.html">3</a></li>
 					<li class="page-item p-2">
-						<a class="page-link" href="#" aria-label="Next">
+						<a class="page-link" href="resume.html" aria-label="Next">
 							<span aria-hidden="true">&raquo;</span>
 						</a>
 					</li>
