--- a/resume.html
+++ b/resume.html
@@ -121,7 +121,7 @@
 
 	</main>
 
-    
+
 
 
 
@@ -139,16 +139,15 @@
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center ">
 					<li class="page-item disabled p-2">
-						<a class="page-link" href="#" aria-label="Previous">
+						<a class="page-link" href="index.html" aria-label="Previous">
 							<span aria-hidden="true">&laquo;</span>
 						</a>
 					</li>
-					<li class="page-item p-2 active"><a class="page-link" href="#">1</a></li>
-					<li class="page-item p-2 "><a class="page-link" href="#">2</a></li>
-					<li class="page-item p-2"><a class="page-link" href="#">3</a></li>
-					<li class="page-item p-2"><a class="page-link" href="#">4</a></li>
+					<li class="page-item p-2 "><a class="page-link" href="index.html">1</a></li>
+					<li class="page-item p-2 active"><a class="page-link" href="resume.html">2</a></li>
+					<li class="page-item p-2"><a class="page-link" href="portfolio.html">3</a></li>
 					<li class="page-item p-2">
-						<a class="page-link" href="#" aria-label="Next">
+						<a class="page-link" href="portfolio.html" aria-label="Next">
 							<span aria-hidden="true">&raquo;</span>
 						</a>
 					</li>
