Displace the main section from the top using div

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
                 </div>
             </nav>
         </section>
+        <section class="container" >
+            <div class="row clearfix" id="fillheader">
+            </div>"
+        </section>
 	</header>
 
 	<!--
