--- a/portfolio.html
+++ b/portfolio.html
@@ -134,7 +134,10 @@
 			</div>
 
 		</section>
-
+        <section class="container" >
+            <div class="row clearfix" id="fillheader">
+            </div>
+        </section>
 
 
 
@@ -156,7 +159,7 @@
 		<section id="linear-navigation justify-content-center">
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center ">
-					<li class="page-item disabled p-2">
+					<li class="page-item  p-2">
 						<a class="page-link" href="resume.html" aria-label="Previous">
 							<span aria-hidden="true">&laquo;</span>
 						</a>
@@ -164,8 +167,8 @@
 					<li class="page-item p-2 "><a class="page-link" href="index.html">1</a></li>
 					<li class="page-item p-2 "><a class="page-link" href="resume.html">2</a></li>
 					<li class="page-item p-2 active"><a class="page-link" href="portfolio.html">3</a></li>
-					<li class="page-item p-2">
-						<a class="page-link disabled" href="#" aria-label="Next">
+					<li class="page-item p-2 disabled">
+						<a class="page-link " href="#" aria-label="Next">
 							<span aria-hidden="true">&raquo;</span>
 						</a>
 					</li>
