--- a/resume.html
+++ b/resume.html
@@ -118,7 +118,10 @@
 			</article>
 
 		</section>
-
+        <section class="container" >
+            <div class="row clearfix" id="fillheader">
+            </div>"
+        </section>
 	</main>
 
 
@@ -138,7 +141,7 @@
 		<section id="linear-navigation justify-content-center">
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center ">
-					<li class="page-item disabled p-2">
+					<li class="page-item  p-2">
 						<a class="page-link" href="index.html" aria-label="Previous">
 							<span aria-hidden="true">&laquo;</span>
 						</a>
