--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+=========================================================================
 
+Home Page
 
-<!-- Home Page -->
-
+=========================================================================
+-->
 <head>
 
 	<!-- Required meta tags -->
@@ -31,18 +34,28 @@
 
 </head>
 
-<body>
+<!--
+=========================================================================
 
-	<!--
-    The header contain a Bootstrap navbar    
-    -->
+Header Section
+
+=========================================================================
+-->
+<body>
 	<header>
-        <section class="container">
-            <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-                <a class="navbar-brand" href="index.html"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
+		<section class="container">
+			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
+
+                <!-- Logo -->
+				<a class="navbar-brand"
+					href="index.html"><img src="images/donovanlogo150x131.png" height="100px" width="100px"/></a>
+
+                <!-- Hamburger -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                
+                <!-- Main Navigation -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active">
@@ -58,12 +71,15 @@
                 </div>
             </nav>
         </section>
-
 	</header>
+<!--
+=========================================================================
 
-	<!--
-    Starts of main content area
-    -->
+Main section
+
+=========================================================================
+-->
+
 <main>
 	<section class="jumbotron jumbotron-fluid">
 
@@ -98,7 +114,12 @@
 
 
 
+<!--
+=========================================================================
 
+Footer section
+=========================================================================
+-->
 	<!--
     Starts of footer
 
@@ -148,7 +169,7 @@
 
 		<section id="footer-sitemap" class="container">
 			<ul class="row ">
-				<li class="col-12 col-sm-6 col-md-3"><a href="idex.html:" class="sitemap-header">Home</a>
+				<li class="col-12 col-sm-6 col-md-3"><a href="index.html:" class="sitemap-header">Home</a>
 					<ul class="footer-sitemap-li">
 						<li><a href="index.html#bio">Bio</a></li>
                         <li><a href="index.html#value-proposition">Value Proposition</a></li>
