--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+=========================================================================
 
+Portfolio Page
 
-<!-- Portfolio Page -->
-
+=========================================================================
+-->
 <head>
 
 	<!-- Required meta tags -->
@@ -33,44 +36,51 @@
 
 <body>
 
-	<!--
-    The header contain a Bootstrap navbar    
-    -->
+<!--
+=========================================================================
+
+Header 
+
+=========================================================================
+-->
+
+<body>
 	<header>
-        <section class="container">
-            <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-                <a class="navbar-brand" href="index.html"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
+		<section class="container">
+			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
+
+                <!-- Logo -->
+				<a class="navbar-brand"
+					href="index.html"><img src="images/donovanlogo150x131.png" height="100px" width="100px"/></a>
+                <!-- Hamburger -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                
+                <!-- Main Navigation -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="index.html">Home (current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="resume.html">Resume</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only"></a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </section>
-
 	</header>
+<!--
+=========================================================================
 
-	<!--
-    Starts of main content area
-    -->
+Main section
 
-
-
-
-
-
-
+=========================================================================
+-->
 
 	<main>
 		<section class="container">
@@ -142,7 +152,13 @@
 	</main>
 
 
+<!--
+=========================================================================
 
+Footer section
+
+=========================================================================
+-->
 
 
 	<!--
@@ -194,7 +210,7 @@
 
 		<section id="footer-sitemap" class="container">
 			<ul class="row ">
-				<li class="col-12 col-sm-6 col-md-3"><a href="idex.html:" class="sitemap-header">Home</a>
+				<li class="col-12 col-sm-6 col-md-3"><a href="index.html:" class="sitemap-header">Home</a>
 					<ul class="footer-sitemap-li">
 						<li><a href="index.html#bio">Bio</a></li>
                         <li><a href="index.html#value-proposition">Value Proposition</a></li>
