troubleshoot header, remove top margin of main

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Header Section
 =========================================================================
 -->
 <body>
-	<header>
+	<header id="#pageheader">
 		<section class="container">
 			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
 
