--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@ Header
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ">
-                            <a class="nav-link" href="index.html">Home (current)</span></a>
+                            <a class="nav-link" href="index.html">Home </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="resume.html">Resume</a>
