Customised page navigation

--- a/resume.html
+++ b/resume.html
@@ -194,7 +194,7 @@ Footer section
 						</a>
 					</li>
 					<li class="page-item p-2 "><a class="page-link" href="index.html">1</a></li>
-					<li class="page-item p-2 active"><a class="page-link" href="resume.html">2</a></li>
+					<li class="page-item p-2 active disabled"><a class="page-link" href="resume.html">2</a></li>
 					<li class="page-item p-2"><a class="page-link" href="portfolio.html">3</a></li>
 					<li class="page-item p-2">
 						<a class="page-link" href="portfolio.html" aria-label="Next">
