Moving logo closer to the center

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,8 @@ Header
 -->
 
 <body>
-	<header>
-		<section class="container">
+	<header class="container">
+		<section >
 			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
 
                 <!-- Logo -->
@@ -82,8 +82,8 @@ Main section
 =========================================================================
 -->
 
-	<main>
-		<section class="container">
+	<main class="container">
+		<section >
 			<div class="row">
 
 				<div class="col-12 col-sm-6  col-md-4 col-lg-3 bg-primary">
@@ -169,7 +169,7 @@ Footer section
     -->
 
     <!-- The linear page navigation -->
-	<footer class="container-fluid ">
+	<footer class="container">
 		<section id="linear-navigation justify-content-center">
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center ">
@@ -180,7 +180,7 @@ Footer section
 					</li>
 					<li class="page-item p-2 "><a class="page-link" href="index.html">1</a></li>
 					<li class="page-item p-2 "><a class="page-link" href="resume.html">2</a></li>
-					<li class="page-item p-2 active disabled" ><a class="page-link" href="portfolio.html">3</a></li>
+					<li class="page-item p-2 active " ><a class="page-link" href="portfolio.html">3</a></li>
 					<li class="page-item p-2 disabled">
 						<a class="page-link " href="#" aria-label="Next">
 							<span aria-hidden="true">&raquo;</span>
