--- a/resume.html
+++ b/resume.html
@@ -43,8 +43,8 @@ Clicking on the logo will bring the visitor to Home Page.
 =========================================================================
 -->
 <body>
-	<header>
-		<section class="container">
+	<header class="container>
+		<section >
 			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
 				<a class="navbar-brand"
 					href="index.html"><img src="images/donovanlogo150x131.png" height="100px" width="100px"/></a>
@@ -70,8 +70,8 @@ Clicking on the logo will bring the visitor to Home Page.
 	</header>
 
 <body>
-	<header>
-		<section class="container">
+	<header class="container">
+		<section >
 			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
 
                 <!-- Logo -->
@@ -116,7 +116,7 @@ Main section
 
 
 
-	<main>
+	<main >
 		<section>
 			<article>
 				<div class="container-fluid">
@@ -184,7 +184,7 @@ Footer section
     -->
 
     <!-- The linear page navigation -->
-	<footer class="container-fluid ">
+	<footer class="container ">
 		<section id="linear-navigation justify-content-center">
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center ">
@@ -194,7 +194,7 @@ Footer section
 						</a>
 					</li>
 					<li class="page-item p-2 "><a class="page-link" href="index.html">1</a></li>
-					<li class="page-item p-2 active disabled"><a class="page-link" href="resume.html">2</a></li>
+					<li class="page-item p-2 active "><a class="page-link" href="resume.html">2</a></li>
 					<li class="page-item p-2"><a class="page-link" href="portfolio.html">3</a></li>
 					<li class="page-item p-2">
 						<a class="page-link" href="portfolio.html" aria-label="Next">
