--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ Header Section
 =========================================================================
 -->
 <body>
-	<header id="#pageheader">
-		<section class="container">
+	<header id="#pageheader" class="container">
+		<section class="row">
 			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
 
                 <!-- Logo -->
@@ -80,7 +80,7 @@ Main section
 =========================================================================
 -->
 
-<main>
+<main class="container">
 	<section class="jumbotron jumbotron-fluid">
 
 		<div class="hero-text">
@@ -128,7 +128,7 @@ Footer section
     -->
 
     <!-- The linear page navigation -->
-	<footer class="container-fluid ">
+	<footer class="container ">
 		<section id="linear-navigation justify-content-center">
 			<nav aria-label="Page navigation">
 				<ul class="pagination justify-content-center ">
@@ -137,7 +137,7 @@ Footer section
 							<span aria-hidden="true">&laquo;</span>
 						</a>
 					</li>
-					<li class="page-item p-2 active disabled"><a class="page-link" href="index.html">1</a></li>
+					<li class="page-item p-2 active "><a class="page-link" href="index.html">1</a></li>
 					<li class="page-item p-2 "><a class="page-link" href="resume.html">2</a></li>
 					<li class="page-item p-2"><a class="page-link" href="portfolio.html">3</a></li>
 					<li class="page-item p-2">
