Shift logo in all 3 pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,15 +43,14 @@ Header
 
 =========================================================================
 -->
-
 <body>
-	<header class="container">
-		<section >
-			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-
+	<header id="#pageheader" >
+        <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
+            <div class="container">
                 <!-- Logo -->
-				<a class="navbar-brand"
-					href="index.html"><img src="images/donovanlogo150x131.png" height="100px" width="100px"/></a>
+                <a class="navbar-brand"
+                    href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
+
                 <!-- Hamburger -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -60,20 +59,14 @@ Header
                 <!-- Main Navigation -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item ">
-                            <a class="nav-link" href="index.html">Home </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only"></a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio</a><span class="sr-only">(current)</span></li>
                     </ul>
                 </div>
-            </nav>
-        </section>
-	</header>
+            </div>
+        </nav>
+  	</header>
 <!--
 =========================================================================
 
