--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@ Header Section
 =========================================================================
 -->
 <body>
-	<header id="#pageheader" class="container">
-		<section class="row">
-			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-
+	<header id="#pageheader" >
+        <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
+            <div class="container">
                 <!-- Logo -->
-				<a class="navbar-brand"
-					href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
+                <a class="navbar-brand"
+                    href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
 
                 <!-- Hamburger -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,20 +57,14 @@ Header Section
                 <!-- Main Navigation -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
+                        <li class="nav-item active"><a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
-            </nav>
-        </section>
-	</header>
+            </div>
+        </nav>
+  	</header>
 <!--
 =========================================================================
 
