--- a/resume.html
+++ b/resume.html
@@ -43,40 +43,12 @@ Clicking on the logo will bring the visitor to Home Page.
 =========================================================================
 -->
 <body>
-	<header class="container>
-		<section >
-			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-				<a class="navbar-brand"
-					href="index.html"><img src="images/donovanlogo150x131.png" height="100px" width="100px"/></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	                    <span class="navbar-toggler-icon"></span>
-	                </button>
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="index.html">Home</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="resume.html">Resume <span class="sr-only">(current)</span></a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="portfolio.html">Portfolio</a>
-							</li>
-						</ul>
-					</div>
-			</nav>
-		</section>
-	
-	</header>
-
-<body>
-	<header class="container">
-		<section >
-			<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
-
+	<header id="#pageheader" >
+        <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: white;">
+            <div class="container">
                 <!-- Logo -->
-				<a class="navbar-brand"
-					href="index.html"><img src="images/donovanlogo80x95.png" height="100px" width="100px"/></a>
+                <a class="navbar-brand"
+                    href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
 
                 <!-- Hamburger -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,20 +58,14 @@ Clicking on the logo will bring the visitor to Home Page.
                 <!-- Main Navigation -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
+                        <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                     </ul>
                 </div>
-            </nav>
-        </section>
-	</header>
+            </div>
+        </nav>
+  	</header>
 <!--
 =========================================================================
 
