--- a/index.html
+++ b/index.html
@@ -74,17 +74,37 @@ Main section
 -->
 
 <main class="container">
-	<section class="jumbotron jumbotron-fluid">
 
-		<div class="hero-text">
-			<h1>I am Donovan</h1>
-			<p>And I'm a Software Developoer</p>
-			<button type="button" class="btn btn-primary">Hire Me</button>
-		</div>
+    <!--
+    ------------------------------------------------------------------
+    Bootstrap4 Jumbotron component
+    ------------------------------------------------------------------
+    -->
 
-	</section>
-
+    <section>
+        <div class="jumbotron">
+            <h1 class="display-4">I am Donovan</h1>
+            <p class="lead">Hire me !</p>
+            <hr class="my-4">
+            <p></p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Hire Me</a>
+            </p>
+        </div>
+    </section>
 	
+
+
+
+
+
+
+
+
+
+
+
+    
 		<article>
 			<h1>Intro / Bio </h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
