--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@ Home Page
 -->
 <head>
 
-    <!-- required meta tags -->
-    <meta name="viewport" content="width=device-width,&nbspinitial-scale=1,&nbspshrink-to-fit=no">
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- CSS Reset --> 
-    <link href="styles/reset.css" rel="stylesheet" />
-    <!-- Bootstrap 4 CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<!--- CSS Reset -->
+	<link href="styles/reset.css" rel="stylesheet" />
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
-    <!-- Font Awesome 4-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- This site's CSS -->
-    <link href="styles/main.css" rel="stylesheet" />
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
-    <!-- Title -->
-    <title>Donovan Lo's Profile</title> <!-- @@@ to edit accordingly for different page -->
+	<!-- Font Awesome 4-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- CSS -->
+	<link href="styles/main.css" rel="stylesheet" />
+
+	<!-- Title -->
+	<title>Donovan Lo's Home Page</title>
 
 </head>
 
@@ -46,34 +50,36 @@ Header section
         Bootstrap navbar component
         =========================================================================
         -->
-        <nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
+        
+
+        <!-- A grey horizontal navbar that becomes vertical on small screens -->
+        <nav class="navbar fixed-top navbar-expand-md  navbar-light xs-light" style="background-color:#8AAFFF;">
             <div class="container">
-                <!--
-                =========================================================================
-                Logo section
-                =========================================================================
-                -->
-                <a class="navbar-brand"
-                    href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
-                <!--
-                =========================================================================
-                Navigation bar
-                =========================================================================
-                -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle&nbspnavigation">
+                <!-- logo -->
+                <a class="navbar-brand" href="#"><img src="images/donovanlogo150x131.png" alt="Logo" style="width:150px; height:131px"></a>
+                <!-- Toggler/collapsibe Button -->
+                <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#collapsibleNavbar"
+                aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                
-                <div class="collapse&nbspnavbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item&nbspactive"><a class="nav-link" href="index.html">Home
-                            <span class="sr-only">(current)</span></a></li> <!-- @@@ to edit accordingly for different page -->
-                        <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                <!-- Links -->
+                <div class="navbar-collapse collapse " id="collapsibleNavbar">
+                    <ul class="nav navbar-nav ">
+                        <li class="nav-item active">
+                        <a class="nav-link" href="#">Link 1</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">Link 3</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+
 
     </header>
 
