Replace hero image.

--- a/index.html
+++ b/index.html
@@ -75,24 +75,19 @@ Main Content section
 
 	<main id="#pagemain">
 
-		<!-- Jumbotron component  -->
-		<div class="card card-image" style="background-image: url('/images/herobackground1920x1080.jpg');"
-			id="hero-image">
-			<div class="text-white text-center rgba-stylish-strong py-5 px-4">
+		<div class="jumbotron jumbotron-fluid">
+            <div class="container text-white text-center rgba-stylish-strong py-5 px-4">
+  
 				<div class="py-5">
 					<!-- Content -->
 					<h5 class="h5 orange-text"> Web Developer</h5>
 					<h1 class="display-4">I am Donovan</h1>
 					<h2 class="card-title h2 my-4 py-2">Hire Me</h2>
-					<p class="mb-4 pb-2 px-md-5 mx-md-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Pariatur obcaecati vero aliquid libero doloribus ad, unde tempora maiores, ullam, modi qui
-						quidem minima debitis perferendis vitae cumque et quo impedit.</p>
-					<a class="btn peach-gradient"> Hire Me</a>
+					
 
 				</div>
 			</div>
-		</div>
-
+        </div>
 		<section class="container" id="myprofile">
 
 			<div class="row">
