--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
 Header section
 
+Headers is visible or hidden depending on the size of the browser
+
 =========================================================================
 -->
 
-<header id="#pageheader" class="d-none d-sm-block">
+<header id="#pageheader" class="d-none d-lg-block">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -64,7 +66,7 @@ Header section
     </nav>
 </header>
 
-<header id="#pageheader" class="d-block d-sm-none">
+<header id="#pageheader" class="d-block d-lg-none">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -100,11 +102,15 @@ Main Content section
     <div class=" jumbotron-fluid">
         <div class="container hero-image">
             <div class="row">
-                <div class="col">
-xxx
+                <div class="col d-none d-md-block align-center text-center">
+                    <h2>Hi, I'm</h1>
+                    <h1>Donovan</h1>
+                    <h2>Web Developer</h2>
+                    <hr>
+                    <h3>Employ Me</h3>
                 </div>
-                <div class="col">
-xxx
+                <div class="col text-center">
+                    <img src="images/donovan343x500.png">
                 </div>
             </div>
         </div>
