--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@ Headers is visible or hidden depending on the size of the browser
 =========================================================================
 -->
 
-<header id="#pageheader" class="d-none d-lg-block">
+<header id="#pageheader" class="d-none d-xl-block">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
             <!-- logo -->
-            <a class="navbar-brand" href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
+            <a class="navbar-brand img-fluid" href="index.html"><img src="images/donovanlogo150x131.png" /></a>
 
                 <!-- Hamburger -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@ Headers is visible or hidden depending on the size of the browser
     </nav>
 </header>
 
-<header id="#pageheader" class="d-block d-lg-none">
+<header id="#pageheader" class="d-block d-xl-none">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -101,8 +101,9 @@ Main Content section
 
     <div class=" jumbotron-fluid">
         <div class="container hero-image">
+   
             <div class="row">
-                <div class="col d-none d-md-block align-center text-center">
+                <div class="col d-none d-md-block align-middle text-center">
                     <h2>Hi, I'm</h1>
                     <h1>Donovan</h1>
                     <h2>Web Developer</h2>
