--- a/resume.html
+++ b/resume.html
@@ -30,40 +30,59 @@
 
 <body>
 
-	<!--
+<!--
 =========================================================================
 
 Header section
 
+Headers is visible or hidden depending on the size of the browser
+
 =========================================================================
 -->
 
-	<header id="#pageheader">
+<header id="#pageheader" class="d-none d-xl-block">
+    <!-- Navbar component -->
+    <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
+        <div class="container">
+            <!-- logo -->
+            <a class="navbar-brand " href="index.html"><img src="images/donovanlogo150x131.png" /></a>
 
-		<!-- Navbar component -->
-		<nav class="navbar fixed-top navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
-			<div class="container">
-				<!-- Logo -->
-				<a class="navbar-brand"
-					href="index.html"><img src="images/donovanlogo150x131.png" height="150px" width="131px"/></a>
+                <!-- Hamburger -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                    </button>
+                <!-- Main Navigation -->
+                <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item "><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                    </ul>
+               </div>    
+        </div>
+    </nav>
+</header>
 
-					<!-- Hamburger -->
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+<header id="#pageheader" class="d-block d-xl-none">
+    <!-- Navbar component -->
+    <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
+        <div class="container">
+            <!-- logo -->
+            <a class="navbar-brand" href="index.html"><img src="images/donovanlogo200x70.png" height="70px" width="200px"/></a>
 
-					<!-- Main Navigation -->
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-							<li class="nav-item active"><a class="nav-link"
-									href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-						</ul>
-					</div>
-			</div>
-		</nav>
-	</header>
+                <!-- Hamburger -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                    </button>
+                <!-- Main Navigation -->
+                <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a></li>
+                        <li class="nav-item "><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                    </ul>
+               </div>    
+        </div>
+    </nav>
+</header>
 <!--
 =========================================================================
 
