Edit Jumbotron and Hero Image

--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@ Headers is visible or hidden depending on the size of the browser
 =========================================================================
 -->
 
-<header id="#pageheader" class="d-none d-xl-block">
+<header id="pageheader" class="d-none d-xl-block">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -62,7 +62,7 @@ Headers is visible or hidden depending on the size of the browser
     </nav>
 </header>
 
-<header id="#pageheader" class="d-block d-xl-none">
+<header id="pageheader" class="d-block d-xl-none">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
