--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <!-- CSS Reset -->
     <link rel="stylesheet" href="styles/reset.css">
 
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
@@ -44,7 +42,7 @@ Headers is visible or hidden depending on the size of the browser
 =========================================================================
 -->
 
-<header id="#pageheader" class="d-none d-xl-block">
+<header id="pageheader1" class="d-none d-xl-block">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -55,7 +53,7 @@ Headers is visible or hidden depending on the size of the browser
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                     </button>
                 <!-- Main Navigation -->
-                <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+                <div class="navbarlink collapse navbar-collapse" id="navbarNav1" style="justify-content: flex-end">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
                         <li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
@@ -66,7 +64,7 @@ Headers is visible or hidden depending on the size of the browser
     </nav>
 </header>
 
-<header id="#pageheader" class="d-block d-xl-none">
+<header id="pageheader2" class="d-block d-xl-none">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -77,7 +75,7 @@ Headers is visible or hidden depending on the size of the browser
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                     </button>
                 <!-- Main Navigation -->
-                <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+                <div class="navbarlink collapse navbar-collapse" id="navbarNav2" style="justify-content: flex-end">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item active"><a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a></li>
                         <li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
@@ -97,332 +95,67 @@ Main Content section
 =========================================================================
 -->
 
-<main id="pagemain container">
+<main id="pagemain" >
 
-    <div class=" jumbotron-fluid">
-        <div class="container hero-image">
-   
-            <div class="row">
-                <div class="col d-none d-md-block align-middle text-center">
-                    <h2>Hi, I'm</h1>
-                    <h1>Donovan</h1>
-                    <h2>Web Developer</h2>
-                    <hr>
-                    <h3>Employ Me</h3>
-                </div>
-                <div class="col text-center">
-                    <img src="images/donovan343x500.png">
-                </div>
+<div class="jumbotron " >
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="hero-text d-none d-md-block">
+                <p class="title2">Hello, I'm</p>
+                <p class="title1">Donovan</p>
+                <p class="title2">Web Developer</p>
+                <hr class="title2">
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Employ Me</a>
+                </p>
+            </div>
+            <div class=" hero-image d-none d-md-block">
+                <img src="images/donovan343x500.png">
+            </div>
+            <div class="hero-text2 d-block d-md-none">
+                <p class="title2-md">Hello, I'm</p>
+                <p class="title1-md">Donovan</p>
+                <p class="title2-md">Web Developer</p>
+                <hr class="title2-md">
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Employ Me</a>
+                </p>
+            </div>
+            <div class=" hero-image-md d-block d-md-none"">
+                <img src="images/donovan343x500.png">
             </div>
         </div>
     </div>
+</div>
 
+
+
+</main>
 
  
 
 
-    <section class="container" id="myprofile">
 
 
-			<div class="row">
 
-				<div class="col-12 col-md-8  order-md-1">
 
-					<!-- Intro / Bio -->
-					<h1 id="bio">Bio</h1>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-				</div>
 
-				<div class="col-12 col-md-8  order-md-2">
 
-					<!--- Value Proposition -->
-					<h1 id="value-proposition">Value Proposition</h1>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-				</div>
 
-				<div class="col-12 col-sm-6 col-md-4  order-md-1">
 
-					<!-- Motivator -->
-					<h1 id="motivator">Motivator</h1>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-					<ul>
-						<li>Lorem ipsum</li>
-						<li>Maecenas vestibulum</li>
-						<li>Aliquam eget</li>
-						<li>Sed auctor</li>
-						<li>Pellentesque habitant</li>
-					</ul>
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
-				</div>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-				<div class="col-12 col-sm-6 col-md-4  order-md-2">
-
-					<!-- Interest -->
-					<h1 id="interest">Interest</h1>
-
-					<ul>
-						<li>Quisque et</li>
-						<li>Pellentesque mattis</li>
-						<li>Donec tortor</li>
-						<li>Pellentesque bibendum</li>
-						<li>Nunc eu</li>
-					</ul>
-
-				</div>
-
-			</div>
-
-			<div class="row">
-				<div class="col text-center">
-					<!-- Testimonials -->
-					<h1>Testimonials</h1>
-				</div>
-
-				<!-- Card component  -->
-
-				<div class="card-deck" id="testimonials">
-					<div class="card">
-						<div class="card-body">
-							<p class="card-text">Lorem ipsum dolor sit amet, mutat verterem mel eu. Eam nihil evertitur
-								cotidieque ex. Vel in nisl impedit. Pro saperet veritus no, sea at dicat.</p>
-							<p class="card-text">Lorem ipsum dolor sit amet, mutat verterem mel eu. Eam nihil evertitur
-								cotidieque ex. Vel in nisl impedit. Pro saperet veritus no, sea at dicat.</p>
-							<p class="cite">- So and So<br>
-                            Such and Such Company</p>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-body">
-							<p class="card-text">Lorem ipsum dolor sit amet, at est reque argumentum, vide viris eripuit
-								usu id. His dolor everti commune cu. Qui summo labitur no. Ei pro.</p>
-							<p class="cite">-John Doe<br>
-								<a href="#">Advent Company</a></p>
-						</div>
-					</div>
-					<div class="card">
-						<div class="card-body">
-							<p class="card-text">Lorem ipsum dolor sit amet, novum periculis intellegat ex eam, veniam
-								option usu an. Vis reque assentior ad. Eu alia qualisque cum, an possim iriure.</p>
-							<p class="cite">-Jane Doe<br>
-                            Acme Company</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-
-				<div class="col-12 col-md-4">
-
-					<!-- Membership -->
-					<h1 id="membership">Membership</h1>
-
-					<p>Society</p>
-
-				</div>
-
-
-				<div class="col-12 col-md-8">
-
-					<!-- Personality Test Results -->
-
-					<div class="row">
-
-						<div class="col">
-
-							<h1 id="personality-test">Personality Test Result 1</h1>
-
-							<p>INTJ</p>
-
-						</div>
-						<div class="col">
-
-							<h1>Personality Test Result 2</h1>
-
-							<p>INTJ</p>
-
-						</div>
-					</div>
-				</div>
-
-			</div>
-
-
-
-		</section>
-
-
-
-	</main>
-
-
-<!--
-=========================================================================
-
-Footer section
-
-=========================================================================
--->
-	<footer id="pagefooter">
-
-		<!-- Pagination component -->
-
-		<nav aria-label="Page navigation" id="pagenavigation">
-			<ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
-				<li class="page-item disabled">
-					<a class="page-link" aria-label="Previous" tabindex="-1">
-						<span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span>
-						<span class="sr-only">Previous</span> <!-- `@@ to edit accordingly for different page -->
-					</a>
-				</li>
-				<li class="page-item active"><a class="page-link">1 <span class="sr-only">(current)</span></a></li>
-				<!-- @@@ to edit accordingly for different page -->
-				<li class="page-item"><a class="page-link">2</a></li>
-				<li class="page-item"><a class="page-link">3</a></li>
-				<li class="page-item">
-					<a class="page-link" aria-label="Next">
-						<span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</li>
-			</ul>
-		</nav>
-
-		<!-- Contact Me section -->
-		<div id="pagefootermiddle" class="container-fluid">
-			<section>
-				<div class="container">
-					<div class="row">
-						<div class="col-12 col-sm-4">
-							<h1>Contact Information</h1>
-							<p class="contactitem">
-								<i class="fa fa-phone" aria-hidden="true"></i><span class="sr-only">Mobile</span>
-								<my-contact number-user="+65 9683" number-domain=" 6694">@</my-contact>
-							</p>
-							<p class="contactitem">
-								<i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span>
-								<!-- Set data-user and data-domain as your  mail username and domain respectively -->
-								<my-email data-user="donovan.lo" data-domain="mensa.org.sg">@</my-email>
-							</p>
-							<p class="contactitem">
-								<i class="fa fa-linkedin" aria-hidden="true"></i><span class="sr-only">LinkedIn</span><a
-									href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
-							<p class="contactitem">
-								<i class="fa fa-user-circle-o" aria-hidden="true"></i><span class="sr-only">Profile</span><a
-									href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
-						</div>
-						<div class="col-12 col-sm-8">
-							<h1>Contact Me Form</h1>
-
-						</div>
-
-					</div>
-				</div>
-			</section>
-		</div>
-
-
-		<!-- Site Map Navigation -->
-		<nav aria-label="Site Map navigation">
-			<section id="footer-sitemap" class="container">
-				<ul class="row ">
-					<li class="col-12 col-sm-6 col-md-3"><a href="index.html:" class="sitemap-header">Home</a>
-						<ul class="footer-sitemap-li">
-							<li><a href="index.html#bio">Bio</a></li>
-							<li><a href="index.html#value-proposition">Value Proposition</a></li>
-							<li><a href="index.html#motivator">Motivator</a></li>
-							<li><a href="index.html#interest">Interest</a></li>
-							<li><a href="index.html#testimonials">Testimonials</a></li>
-							<li><a href="index.html#membership">Membership</a></li>
-							<li><a href="index.html#personality-test">Personality Test Result</a></li>
-						</ul>
-					</li>
-					<li class=" col-12 col-sm-6 col-md-3"><a href="resume.html" class="sitemap-header">Resume</a>
-						<ul class="footer-sitemap-li">
-							<li><a href="resume.html#objective">Objective</a></li>
-							<li><a href="resume.html#relevant-summary">Relevant Skills</a></li>
-							<li><a href="resume.html#past-working-experience">Past Working Experience</a></li>
-							<li><a href="resume.html#education">Education</a></li>
-							<li><a href="resume.html#skills">Skills</a></li>
-							<li><a href="resume.html#certificates">Certificates</a></li>
-							<li><a href="resume.html#volunteering-experience">Volunteering Experience</a></li>
-						</ul>
-					</li>
-					<li class=" col-12 col-sm-6 col-md-3">
-						<a href="portfolio.html" class="sitemap-header">Portfolio</a>
-						<ul class=" footer-sitemap-li ">
-							<li><a href="portfolio.html#project-1 ">Project #1</a></li>
-							<li><a href="portfolio.html#project-2 ">Project #2</a></li>
-							<li><a href="portfolio.html#project-3 ">Project #3</a></li>
-							<li><a href="portfolio.html#project-4 ">Project #4</a></li>
-						</ul>
-					</li>
-					<li class="sitemap-header">
-					<li><a href="resume.html" class="download-resume">Download</a></li>
-					</li>
-				</ul>
-				&nbsp;
-			</section>
-
-
-		</nav>
-
-
-
-
-
-	</footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<!-- Bootstrap CSS -->
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
 </body>
 
 </html>
