--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@ Headers is visible or hidden depending on the size of the browser
 =========================================================================
 -->
 
-<header id="#pageheader" class="d-none d-xl-block">
+<header id="pageheader" class="d-none d-xl-block">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
@@ -55,14 +55,14 @@ Headers is visible or hidden depending on the size of the browser
                     <ul class="nav navbar-nav navbar-right">
                         <li class="nav-item "><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item "><a class="nav-link" href="resume.html">Resume</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio<<span class="sr-only">(current)</span>/a></li>
+                        <li class="nav-item active"><a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span>></a></li>
                     </ul>
                </div>    
         </div>
     </nav>
 </header>
 
-<header id="#pageheader" class="d-block d-xl-none">
+<header id="pageheader" class="d-block d-xl-none">
     <!-- Navbar component -->
     <nav class="navbar navbar-expand-md navbar-light xs-light" style="background-color: #8AAFFF">
         <div class="container">
