Editing Resume Page

--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@ Footer section
                 </li>
                 <li class="page-item active"><a class="page-link">1 <span class="sr-only">(current)</span></a></li>
                 <!-- @@@ to edit accordingly for different page -->
-                <li class="page-item"><a class="page-link" href="resume.html">2</a></li>
-                <li class="page-item"><a class="page-link" href="portfolio.html">3</a></li>
+                <li class="page-item"><a class="page-link" href="resume.html#top">2</a></li>
+                <li class="page-item"><a class="page-link" href="portfolio.html#top">3</a></li>
                 <li class="page-item">
-                    <a class="page-link" aria-label="Next" href="resume.html">
+                    <a class="page-link" aria-label="Next" href="resume.html#top">
                         <span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
                         <span class="sr-only">Next</span>
                     </a>
