--- a/resume.html
+++ b/resume.html
@@ -98,27 +98,27 @@ Main Content section
 	<main id="#pagemain">
 
 		<section>
-            <div class="container">
+            <div class="container" >
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12" id="objective">
                         <h1>Objectives</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-8 order-md-1">
+                    <div class="col-12 col-sm-12 col-md-8 order-md-1" id="relevant-summary">
                         <h1>Relavant Skills</h1>
                         <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.
                         </p>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-8 order-md-2">
+                    <div class="col-12 col-sm-12 col-md-8 order-md-2" id="past-working-experience">
                         <h1>Working Experience</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.
                         </p>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 order-md-1">
+                    <div class="col-12 col-sm-6 col-md-4 order-md-1" id="education">
                         <h1>Education</h1>
                         <ul>
                             <li>xxx</li>
@@ -127,7 +127,7 @@ Main Content section
                             <li>xxx</li>
                         </ul>
                     </div>
-                    <div class="col-12 col-sm-6 col-md-4 order-md-2">
+                    <div class="col-12 col-sm-6 col-md-4 order-md-2" id="skills">
                         <h1>Skills</h1>
                         <ul>
                             <li>xxx</li>
@@ -138,7 +138,7 @@ Main Content section
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col" id="certificates">
                         <h1>Certificates and Projects</h1>
                         <ul>
                             <li>xxx</li>
@@ -149,7 +149,7 @@ Main Content section
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6" id="volunteering-experience">
                         <h1>Volunteering</h1>
                     </div>
                     <div class="col-12 col-sm-6">
@@ -173,18 +173,18 @@ Footer section
         <!-- Pagination component -->
         <nav aria-label="Page navigation" id="pagenavigation">
             <ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" aria-label="Previous" tabindex="-1">
-                        <span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span>
+                <li class="page-item ">
+                    <a class="page-link" aria-label="Previous" href="index.html#top">
+                        <span aria-hidden="true"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></span> 
                         <span class="sr-only">Previous</span> <!-- `@@ to edit accordingly for different page -->
                     </a>
                 </li>
-                <li class="page-item active"><a class="page-link">1 <span class="sr-only">(current)</span></a></li>
+                <li class="page-item "><a class="page-link" href="index.html#top">1 </a></li>
                 <!-- @@@ to edit accordingly for different page -->
-                <li class="page-item"><a class="page-link" href="resume.html">2</a></li>
-                <li class="page-item"><a class="page-link" href="portfolio.html">3</a></li>
+                <li class="page-item active"><a class="page-link">2 <span class="sr-only">(current)</span></a></li>
+                <li class="page-item"><a class="page-link" href="portfolio.html#top">3 </a></li>
                 <li class="page-item">
-                    <a class="page-link" aria-label="Next" href="resume.html">
+                    <a class="page-link" aria-label="Next" href="portfolio.html#top">
                         <span aria-hidden="true"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></span>
                         <span class="sr-only">Next</span>
                     </a>
