Editing common codes from Home Page to Portfolio Page

--- a/resume.html
+++ b/resume.html
@@ -152,7 +152,7 @@ Main Content section
                     <div class="col-12 col-sm-6" id="volunteering-experience">
                         <h1>Volunteering</h1>
                     </div>
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6" id="download-resume">
                         <h1>Download</h1>
                         <p> printer friendly resume</p>
                     </div>
