Editing Portfolio Page, add Bootstrap card component

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,26 +98,53 @@ Main Content section
 
 
 	<main>
+
+        <div class="container">
+
+        <a id="portfolio"></a>
+         <h1>Portfolio</h1>
+
+
+            <div class="card-deck">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title"><a id="project-1"></a>Project 001</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title"><a id="project-2"></a>Project 002</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title"><a id="project-3"></a>Project 003</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title"><a id="project-4"></a>Project 004</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 	
-    <a id="portfolio"></a>
-    <h1>Portfolio<h1>
+    
 
-
-    <a id="project-1"></a>
-    <h2>Project 001</h2>
-
-
-    <a id="project-2"></a>
-    <h2>Project 002</h2>
-
-
-    <a id="project-3"></a>
-    <h3>Project 003</h3>
-
-
-    <a id="project-4"></a>
-    <h4>Project 004</h4>
-
+    
 
 
 
