Updated certificate, past working experience

--- a/resume.html
+++ b/resume.html
@@ -121,10 +121,10 @@ Main Content section
                     <div class="col-12 col-sm-6 col-md-4 order-md-1" id="education">
                         <h1>Education</h1>
                         <ul>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
+                            <li>Bachelor's Degree BSc(Hons) in Computing, Upper Second Honors
+                            Coventry University</li>
+                            <li>Advanced Diploma in Computer Studies University of Cambridge</li>
+                    
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 order-md-2" id="skills">
@@ -141,16 +141,18 @@ Main Content section
                     <div class="col" id="certificates">
                         <h1>Certificates and Projects</h1>
                         <ul>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
+                            <li>WSQ Advanced Certificate in Training and Assessment (ACTA)</li>
+                            
                         </ul>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-sm-6" id="volunteering-experience">
-                        <h1>Volunteering</h1>
+                        <h1>Past Volunteering experience</h1>
+                        <ul>
+                            <li>Venue-based HIV Teesting Projects</li>
+                            <li>Volunteer IT Administrator</li>
+                            <li>Grassroot Resident Committee Executive Member</li>
                     </div>
                     <div class="col-12 col-sm-6" id="download-resume">
                         <h1>Download</h1>
