--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-	<title>Donovan's Home Page</title>
+	<title>Donovan's Resume Page</title>
     
     <!-- CSS Reset -->
     <link rel="stylesheet" href="styles/reset.css">
@@ -121,9 +121,9 @@ Main Content section
                     <div class="col-12 col-sm-6 col-md-4 order-md-1" id="education">
                         <h1>Education</h1>
                         <ul>
-                            <li>Bachelor's Degree BSc(Hons) in Computing, Upper Second Honors
-                            Coventry University</li>
-                            <li>Advanced Diploma in Computer Studies University of Cambridge</li>
+                            <li>Bachelor's Degree BSc(Hons) in Computing, Upper Second Honors - 
+                            <u>Coventry University</u></li>
+                            <li>Advanced Diploma in Computer Studies - <u>University of Cambridge</u></li>
                     
                         </ul>
                     </div>
