Add Skills, Update Education

--- a/resume.html
+++ b/resume.html
@@ -121,19 +121,25 @@ Main Content section
                     <div class="col-12 col-sm-6 col-md-4 order-md-1" id="education">
                         <h1>Education</h1>
                         <ul>
-                            <li>Bachelor's Degree BSc(Hons) in Computing, Upper Second Honors - 
-                            <u>Coventry University</u></li>
-                            <li>Advanced Diploma in Computer Studies - <u>University of Cambridge</u></li>
+                            <li>Bachelor's Degree BSc(Hons) in Computing, Upper Second Honors<br> 
+                            <em>Coventry University</em></li>
+                            <li>Advanced Diploma in Computer Studies<br>
+                            <em>University of Cambridge</em></li>
                     
                         </ul>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 order-md-2" id="skills">
                         <h1>Skills</h1>
                         <ul>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
-                            <li>xxx</li>
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>JavaScript</li>
+                            <li>Bootstrap</li>
+                            <li>jQuery</li>
+                            <li>UI/UX</li>
+                            <li>AJAX</li>
+                            <li>RESTful API</li>
+                            <li>JSON</li>
                         </ul>
                     </div>
                 </div>
