--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Footer section
                 </div>
             </section>
         </div>
- 
+ <div id="pagefooterbottom" class="container-fluid" style="background-color: darkblue ">
         <!-- Site Map Navigation -->
         <nav aria-label="Site Map navigation">
             <section id="footer-sitemap" class="container">
@@ -340,7 +340,7 @@ Footer section
             </section>
  
         </nav>
- 
+ </div>
  
  
  
