--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@ Main Content section
                 <!-- Motivator -->
                 <h1 id="motivator">Motivator</h1>
                 <ul>
-                    <li>Lorem ipsum</li>
-                    <li>Maecenas vestibulum</li>
-                    <li>Aliquam eget</li>
-                    <li>Sed auctor</li>
-                    <li>Pellentesque habitant</li>
+                    <li>Leadership needs to be about helping others become the best they can be</li>
+                    <li>One’s mind, once stretched by a new idea, never regains its original dimensions.</li>
+                    <li>Knowledge not shared is knowledge wasted.</li>
+                    <li>Ideas built on Ideas.</li>
+                    <li>A question worth answering more than once is an answer that should be recorded down somewhere.</li>
+                    <li>Just when the caterpillar thought the world was over, it became a butterfly.</li>
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-4  order-md-2">
@@ -297,7 +298,8 @@ Footer section
                 </div>
             </section>
         </div>
- <div id="pagefooterbottom" class="container-fluid" style="background-color: darkblue ">
+
+
         <!-- Site Map Navigation -->
         <nav aria-label="Site Map navigation">
             <section id="footer-sitemap" class="container">
