Add membership and personality test result

--- a/index.html
+++ b/index.html
@@ -218,19 +218,19 @@ Main Content section
             <div class="col-12 col-md-4">
                 <!-- Membership -->
                 <h1 id="membership">Membership</h1>
-                <p>Society<br><br><br></p>
+                <p><h3>Mensa Singapore</h3></p>
             </div>
 
             <div class="col-12 col-md-8">
                 <!-- Personality Test Results -->
                 <div class="row">
                     <div class="col">
-                        <h1 id="personality-test">Personality Test Result 1</h1>
-                        <p>INTJ</p>
+                        <h1 id="personality-test">Myers–Briggs Type Indicator</h1>
+                        <p><h3>The Archetect - INTJ</h3></p>
                     </div>
                     <div class="col">
-                        <h1>Personality Test Result 2</h1>
-                        <p>INTJ</p>
+                        <h1>DISC Profile</h1>
+                        <p></p>
                     </div>
                 </div>
             </div>
